# Vulkan-Game-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compute.cpp  main.cpp
app/: CMakeLists.txt
cmake/: doctestAddTests.cmake
engine/: CMakeLists.txt
engine/src/: defines.hpp  entry.hpp  game_types.hpp
engine/src/core/: application.cpp  application.hpp  asserts.hpp  clock.cpp  clock.hpp  e_memory.cpp  e_memory.hpp  event.cpp  event.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp
engine/src/math/: constants.hpp  math_types.hpp  vec.cpp  vec.hpp
engine/src/platform/: platform.hpp  platform_win32.cpp  platform_win32.hpp
engine/src/renderer/: renderer.cpp  renderer.hpp  renderer_backend.hpp
engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_defines.inl  vulkan_device.cpp  vulkan_device.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_framebuffer.cpp  vulkan_framebuffer.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_platform.hpp  vulkan_platform_win32.cpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
shaders/: triangle.frag
testing_ground/: CMakeLists.txt
testing_ground/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: doctest_main.cpp  entry.cpp  game.hpp  main.cpp
tests/src/math/: vec_test.hpp
